Fix broken post box on firefox

--- a/less/base.less
+++ b/less/base.less
@@ -367,3 +367,5 @@ iframe[src^="https://www.youtube"] {
 		font-size: 120%;
 	}
 }
+
+#text-input { overflow: visible ;}
